add background to the game

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <div id="loading">Loading..</div>
 
-    <img id="playerImg" src="assets/images/sprit-human.png">
+    <img id="playerImg" src="assets/images/sprit-human.png" alt="images/sprit-human.png">
 
     <script src="src/script.js" type="module"></script>
 </body>
